# MJC-MC-Site

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  dump.sql  nginx.conf  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js
apps/activites/: apps.py  models.py
apps/activites/migrations/: 0001_initial.py  0002_activitypage_link_and_more.py  0002_alter_activitylist_content.py  0002_initial.py  0003_alter_activitylist_seo_keywords_and_more.py  0003_animateur_remove_activitypage_instructors_and_more.py  0004_alter_activitypage_animateurs.py  0005_remove_activitypage_price_non_resident_and_more.py  0006_activitylist_seo_keywords_activitypage_seo_keywords.py
apps/agenda/: models.py
apps/agenda/migrations/: 0001_initial.py  0002_initial.py  (+12 more)
apps/association/: apps.py  models.py
apps/common/: forms.py  mixins.py  models.py  seo_context_processors.py  wagtail_hooks.py  widgets.py
apps/home/: models.py  views.py
apps/search/: views.py
config/: settings.py  urls.py
config/settings/: __init__.py  base.py
config/templates/: base.html
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  dev.py  prod.py
mysite/mysite/: urls.py
static/css/: output.min.css  tailwind.css
static/js/: imageViewer.js  mobileMenu.js  mysite.js  reposition_image.js  stickyHeader.js
templates/: 404.html  base.html
templates/components/: breadcrumb.html  image_viewer.html
templates/includes/: detail_page.html  footer.html  header.html
(+87 files in other folders)
