[tool.poetry]
name = "mjc-site-fromzero"
version = "0.1.0"
description = ""
authors = ["Théodore de Boisseson <theodoredeboisseson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
wagtail = "^6.4"
django-decouple = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
