[tool.poetry]
name = "MJC-MC-Site"
version = "0.1.0"
description = "Site web de la Maison des Jeunes et de la Culture de Mauguio-Carnon. 2025"
authors = ["Théodore de Boisseson <theodoredeboisseson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
wagtail = "^6.4"
django-decouple = "^2.1"
psycopg = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
